--- a/Python_Quick_Refresher.ipynb
+++ b/Python_Quick_Refresher.ipynb
@@ -555,6 +555,46 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w0S6fmoW0fBr",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 3. Variable names"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jUhi6L1u1ZYq",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1wEvPWKaeK28QVUkxEw2sTiRnU9Jwi09D)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TeYaOE4Q2qq7",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1Dz3V2qabTIHG4e6NEpU-F6TT8bUbSQcs)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EgO3zJj14rtO",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1MQeeY-Q_azkNZzgbMdUOfIAUGRw2dXPD)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vixkb0CRzNAW",
