--- a/Section_3_Variables_and_Memory.ipynb
+++ b/Section_3_Variables_and_Memory.ipynb
@@ -247,11 +247,11 @@
       "metadata": {
         "id": "Jgt5wkN1NTIu",
         "colab_type": "code",
+        "outputId": "31677e79-0fdd-4b68-f8d2-b4866c74359d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "31677e79-0fdd-4b68-f8d2-b4866c74359d"
+        }
       },
       "source": [
         "import sys\n",
@@ -260,7 +260,7 @@
         "\n",
         "sys.getrefcount(a)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,11 +293,11 @@
       "metadata": {
         "id": "-7PxJdJdZDti",
         "colab_type": "code",
+        "outputId": "76ddd19f-7865-4eef-8913-c8c9ea6df61f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "76ddd19f-7865-4eef-8913-c8c9ea6df61f"
+        }
       },
       "source": [
         "# BETTER WAY\n",
@@ -310,7 +310,7 @@
         "\n",
         "ref_count(id(my_var))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,11 +331,11 @@
       "metadata": {
         "id": "A3nVCRdAZkWR",
         "colab_type": "code",
+        "outputId": "1d1df94f-e1e8-4792-c0ae-20fd4439ca21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "1d1df94f-e1e8-4792-c0ae-20fd4439ca21"
+        }
       },
       "source": [
         "other_var = my_var\n",
@@ -343,7 +343,7 @@
         "print(id(my_var))\n",
         "print(id(other_var))"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,16 +360,16 @@
       "metadata": {
         "id": "pPNv8gwebUgF",
         "colab_type": "code",
+        "outputId": "bb8fb846-1fb9-44bf-97da-b8b1e6cb2044",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bb8fb846-1fb9-44bf-97da-b8b1e6cb2044"
+        }
       },
       "source": [
         "ref_count(id(other_var))"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -390,18 +390,18 @@
       "metadata": {
         "id": "pn1RMKa9blcJ",
         "colab_type": "code",
+        "outputId": "728c57da-d179-4580-8334-f1832c373d4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "728c57da-d179-4580-8334-f1832c373d4d"
+        }
       },
       "source": [
         "other_other = my_var\n",
         "\n",
         "ref_count(id(other_var))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,16 +435,16 @@
       "metadata": {
         "id": "6v-TTdKib0hp",
         "colab_type": "code",
+        "outputId": "a67bda69-5be2-4667-85d2-90ae308dbe1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a67bda69-5be2-4667-85d2-90ae308dbe1c"
+        }
       },
       "source": [
         "ref_count(id(other_other))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,11 +475,11 @@
       "metadata": {
         "id": "Zhr0xMOSb2ji",
         "colab_type": "code",
+        "outputId": "48f7ea82-b259-46e9-f656-e2dd0eb45676",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "48f7ea82-b259-46e9-f656-e2dd0eb45676"
+        }
       },
       "source": [
         "my_var_id = id(my_var)\n",
@@ -489,7 +489,7 @@
         "\n",
         "ref_count(my_var_id)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,16 +510,16 @@
       "metadata": {
         "id": "eo3bWchbcomB",
         "colab_type": "code",
+        "outputId": "39146dc9-e173-4679-c0e4-1c5508672584",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "39146dc9-e173-4679-c0e4-1c5508672584"
+        }
       },
       "source": [
         "ref_count(my_var_id)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,16 +752,16 @@
       "metadata": {
         "id": "WpSs2NOIpe01",
         "colab_type": "code",
+        "outputId": "42b6478c-d097-4823-b7ee-621cf7d23cac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "42b6478c-d097-4823-b7ee-621cf7d23cac"
+        }
       },
       "source": [
         "my_var = A()"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,16 +778,16 @@
       "metadata": {
         "id": "oLRxQFncphA-",
         "colab_type": "code",
+        "outputId": "f86a745a-4a69-47a5-c1d1-4904d527e0eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f86a745a-4a69-47a5-c1d1-4904d527e0eb"
+        }
       },
       "source": [
         "hex(id(my_var))"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,18 +808,18 @@
       "metadata": {
         "id": "2ZJO0eUGqFmc",
         "colab_type": "code",
+        "outputId": "cbe5fd06-bc13-4b64-893d-b0144d86d1c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "cbe5fd06-bc13-4b64-893d-b0144d86d1c3"
+        }
       },
       "source": [
         "print('a: \\t{0}'.format(hex(id(my_var))))\n",
         "print('a.b: \\t{0}'.format(hex(id(my_var.b))))\n",
         "print('b.a: \\t{0}'.format(hex(id(my_var.b.a))))"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,16 +851,16 @@
       "metadata": {
         "id": "80XK0iTfrMyv",
         "colab_type": "code",
+        "outputId": "406ca72a-fbc1-4ff5-f08e-94dbeae863ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "406ca72a-fbc1-4ff5-f08e-94dbeae863ba"
+        }
       },
       "source": [
         "ref_count(a_id)"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,16 +881,16 @@
       "metadata": {
         "id": "xJ68ASqUr5Tu",
         "colab_type": "code",
+        "outputId": "00c33592-f12b-486c-bc55-c7f2a08cb4ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "00c33592-f12b-486c-bc55-c7f2a08cb4ab"
+        }
       },
       "source": [
         "ref_count(b_id)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,11 +911,11 @@
       "metadata": {
         "id": "GUID2mgcsEHf",
         "colab_type": "code",
+        "outputId": "6a61f12d-d045-431e-8b81-002340634c28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "6a61f12d-d045-431e-8b81-002340634c28"
+        }
       },
       "source": [
         "print('refcount(a) = {0}'.format(ref_count(a_id)))\n",
@@ -923,7 +923,7 @@
         "print('a: {0}'.format(object_by_id(a_id)))\n",
         "print('b: {0}'.format(object_by_id(b_id)))"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,11 +977,11 @@
       "metadata": {
         "id": "9nYTpM79sqW2",
         "colab_type": "code",
+        "outputId": "892a27e8-b649-4577-e020-5740f7a7d12e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "892a27e8-b649-4577-e020-5740f7a7d12e"
+        }
       },
       "source": [
         "print('refcount(a) = {0}'.format(ref_count(a_id)))\n",
@@ -989,7 +989,7 @@
         "print('a: {0}'.format(object_by_id(a_id)))\n",
         "print('b: {0}'.format(object_by_id(b_id)))"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1022,11 +1022,11 @@
       "metadata": {
         "id": "sNP46z-hsrgz",
         "colab_type": "code",
+        "outputId": "0ccdd719-2163-436d-dc3e-d4481a3d81e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "0ccdd719-2163-436d-dc3e-d4481a3d81e3"
+        }
       },
       "source": [
         "gc.collect()\n",
@@ -1035,7 +1035,7 @@
         "print('a: {0}'.format(object_by_id(a_id)))\n",
         "print('b: {0}'.format(object_by_id(b_id)))"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,16 +1054,16 @@
       "metadata": {
         "id": "YxQrfqRhtAzU",
         "colab_type": "code",
+        "outputId": "a35f0ff0-7ad9-4523-ced5-1f0157351eb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a35f0ff0-7ad9-4523-ced5-1f0157351eb8"
+        }
       },
       "source": [
         "ref_count(a_id)"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,16 +1084,16 @@
       "metadata": {
         "id": "O8nc0X25t6xx",
         "colab_type": "code",
+        "outputId": "72afff14-dd64-4ad3-9a61-99cda4b0c4b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "72afff14-dd64-4ad3-9a61-99cda4b0c4b1"
+        }
       },
       "source": [
         "ref_count(b_id)"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,16 +1114,16 @@
       "metadata": {
         "id": "td1qY8GIuJKz",
         "colab_type": "code",
+        "outputId": "4a7f1d4d-ba4b-4b2f-9433-75d048412434",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4a7f1d4d-ba4b-4b2f-9433-75d048412434"
+        }
       },
       "source": [
         "object_by_id(b_id)"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1152,9 +1152,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7rEkoX8evrgL",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4. Dynamic vs Static Typing"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "HJlC_XxjuQnA",
+        "id": "cUCMsEvFv06e",
         "colab_type": "code",
         "colab": {}
       },
