--- a/Section_3_Variables_and_Memory.ipynb
+++ b/Section_3_Variables_and_Memory.ipynb
@@ -1162,9 +1162,178 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "riRaous3Ry8_",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1D8zc-W3_MG3zIdW-6hWxsmifgwYeBa9O)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "cUCMsEvFv06e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 'hello'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UT-ixyEeSVB2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d014309c-6620-4f62-983a-f6a6c4411c6b"
+      },
+      "source": [
+        "type(a)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OEzgUJzvSX7I",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = lambda x: x**2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i3UalogXSb3X",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c24175e9-e9bb-4604-f19c-b8e382085e53"
+      },
+      "source": [
+        "a(2)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Xh48KaTSeUe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "dc279899-d986-4389-b71f-44adbb0eb6ed"
+      },
+      "source": [
+        "type(a)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "function"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RSuQctqHSfTS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 3 + 4j"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G2m-X-OTSjcI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f0f4596e-7c29-42b8-aa4e-e12f5ffabde9"
+      },
+      "source": [
+        "type(a)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "complex"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6vS2STWmSlR6",
         "colab_type": "code",
         "colab": {}
       },
