--- a/Section_3_Variables_and_Memory.ipynb
+++ b/Section_3_Variables_and_Memory.ipynb
@@ -1331,6 +1331,42 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8q2TCifOTGzc",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 5. Variable Re-Assignment"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lU6czMRZTXoX",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1-oB-43dG9yjAt73PAAACw-ANxCFf06Xa)\n",
+        "</br>\n",
+        "This is very important to remember, that we are not Re-Assigning the variable, we are creating whole new memory address, so 2 different values, i.e. memory addresses are used for the same variable `my_var`\n",
+        "</br>\n",
+        "So what happens if we do like `my_var = my_var + 5`, will it create new address in memory, i.e. reserve memory:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nm2XwWRlUaLY",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1CeJSPNy9ZTqfoJXZaMw5R5K5XfI6AE0i)\n",
+        "</br>\n",
+        "Yes it will reserve new memory address."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6vS2STWmSlR6",
@@ -1338,10 +1374,194 @@
         "colab": {}
       },
       "source": [
-        ""
+        "a = 10"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ce23r_QHU3co",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "43ae074f-909a-42a6-b941-f63b5b9af998"
+      },
+      "source": [
+        "hex(id(a))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0xa68be0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dfBfXDkVU4tR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b1b81a6a-df66-4fe2-ad88-080a2b3f2df1"
+      },
+      "source": [
+        "a = 15\n",
+        "hex(id(a))"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0xa68c80'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HyuNI3GbU-gK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "62716abc-343f-486e-e7a2-d472171899ca"
+      },
+      "source": [
+        "a = 5\n",
+        "hex(id(a))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0xa68b40'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lD0lWYocVA5g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9b7d6e98-ef78-45cc-e7f5-8a4d542b2878"
+      },
+      "source": [
+        "a = a + 1\n",
+        "hex(id(a))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0xa68b60'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WRNWc13cVIob",
+        "colab_type": "text"
+      },
+      "source": [
+        "However, look at this:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cSiylhsQVCBz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "e3102bfa-115b-413b-b891-e91bb8f250ea"
+      },
+      "source": [
+        "a = 10\n",
+        "b = 10\n",
+        "print(hex(id(a)))\n",
+        "print(hex(id(b)))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0xa68be0\n",
+            "0xa68be0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dScQRspgVaWP",
+        "colab_type": "text"
+      },
+      "source": [
+        "The memory addresses of both **a** and **b** are the same!! \n",
+        "\n",
+        "We'll revisit this in a bit to explain what is going on."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8wgzFGf2Vde2",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
